// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-calendar #render should render component as expected (1) 1`] = `
<gux-calendar>
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            March 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1645938000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1646024400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646110800000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646197200000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646283600000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646370000000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646456400000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1646542800000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646629200000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1646715600000" tabindex="0">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646802000000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646888400000" tabindex="-1">
              10
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646974800000" tabindex="-1">
              11
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647061200000" tabindex="-1">
              12
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647147600000" tabindex="-1">
              13
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647230400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647316800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647403200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647489600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647576000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647662400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647748800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647835200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647921600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648008000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648094400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648180800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648267200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648353600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648440000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648526400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648612800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648699200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648785600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648872000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648958400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649044800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649131200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649217600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649304000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649390400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649476800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (2) 1`] = `
<gux-calendar value="2018-02-13">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            February 2018
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517115600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517202000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517288400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517374800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517461200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517547600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517634000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1517720400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517806800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517893200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517979600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518066000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518152400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518238800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518325200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518411600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1518498000000" tabindex="0">
              13
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518584400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518670800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518757200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518843600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518930000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519016400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519102800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519189200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519275600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519362000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519448400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1519534800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519621200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519707600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519794000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519880400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519966800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520053200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520139600000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520226000000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520312400000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520398800000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520485200000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520571600000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520658000000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (3) 1`] = `
<gux-calendar mode="single" number-of-months="2">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            March 2022
          </label>
          <label>
            April 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1645938000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1646024400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646110800000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646197200000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646283600000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646370000000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646456400000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1646542800000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646629200000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1646715600000" tabindex="0">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646802000000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646888400000" tabindex="-1">
              10
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646974800000" tabindex="-1">
              11
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647061200000" tabindex="-1">
              12
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647147600000" tabindex="-1">
              13
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647230400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647316800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647403200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647489600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647576000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647662400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647748800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647835200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647921600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648008000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648094400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648180800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648267200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648353600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648440000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648526400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648612800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648699200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648785600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648872000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648958400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649044800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649131200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649217600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649304000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649390400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1649476800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
        </table>
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648353600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648440000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648526400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648612800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648699200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648785600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648872000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648958400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649044800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649131200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649217600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649304000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649390400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649476800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1649563200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649649600000" tabindex="-1">
              11
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649736000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649822400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649908800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649995200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650081600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650168000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650254400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650340800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650427200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650513600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650600000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650686400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650772800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650859200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650945600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651032000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651118400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651204800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651291200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651377600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651464000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651550400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651636800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651723200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651809600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651896000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (4) 1`] = `
<gux-calendar mode="range">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            March 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1645938000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1646024400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646110800000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646197200000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646283600000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646370000000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646456400000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1646542800000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646629200000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered gux-selected gux-start-date" data-date="1646715600000" tabindex="0">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646802000000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646888400000" tabindex="-1">
              10
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1646974800000" tabindex="-1">
              11
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647061200000" tabindex="-1">
              12
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647147600000" tabindex="-1">
              13
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647230400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647316800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647403200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647489600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647576000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647662400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1647748800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647835200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1647921600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648008000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648094400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648180800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648267200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648353600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648440000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648526400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648612800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648699200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648785600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648872000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (5) 1`] = `
<gux-calendar max-date="2019-07-10" min-date="2019-05-02" mode="range">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            March 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1645938000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1646024400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646110800000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646197200000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646283600000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646370000000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646456400000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1646542800000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646629200000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled gux-hovered gux-selected gux-start-date" data-date="1646715600000" tabindex="0">
              8
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646802000000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646888400000" tabindex="-1">
              10
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1646974800000" tabindex="-1">
              11
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647061200000" tabindex="-1">
              12
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1647147600000" tabindex="-1">
              13
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647230400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647316800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647403200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647489600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647576000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647662400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1647748800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647835200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1647921600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648008000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648094400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648180800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648267200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1648353600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648440000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648526400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648612800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648699200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648785600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648872000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;
